--- a/docs/notebooks/public-training-set-des-dr2.ipynb
+++ b/docs/notebooks/public-training-set-des-dr2.ipynb
@@ -5,17 +5,15 @@
    "id": "9d42adbb-55a5-4edd-aaae-2a5c2279e279",
    "metadata": {},
    "source": [
-    "<img align='left' src = https://linea.org.br/wp-content/themes/LIneA/imagens/logo-header.jpg width=150 style='padding: 20px'> \n",
+    "<img align='left' src = https://www.linea.org.br/brand/linea-logo-color.svg width=150 style='padding: 20px'> \n",
     "\n",
     "## Photo-z Training Set\n",
     "\n",
-    "Combination of the public collection of redshifts made available by spectroscopic surveys and fotometric data from DES DR2.\n",
+    "Collection of public redshift catalogs made available by spectroscopic surveys combined with photometric data from DES DR2.\n",
     "\n",
     "\n",
-    "Contact: Julia Gschwend ([julia@linea.org.br](mailto:julia@linea.org.br))\n",
-    "<br>\n",
-    "<br>\n",
-    "\n"
+    "Contact: Julia Gschwend ([julia@linea.org.br](mailto:julia@linea.org.br)) <br>\n",
+    "Last verified run: **2024-Jul-22** <br>\n"
    ]
   },
   {
@@ -31,61 +29,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbbe57a5-fb05-4166-a2c3-dfd2b719f8ec",
-   "metadata": {},
+   "id": "ce385d91-cffd-419d-b699-65e218e86d7b",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Notes \n",
     "\n",
-    "The characterization of the spectroscopic redshifts catalog is available in a separate notebook. If you have questions, feel free to contact me ([julia@linea.org.br](mailto:julia@linea.org.br)). \n"
+    "The training set was created based on the spatial correspondence between the objects present in the redshift catalog described above and the object table (_coadd_objects_) of DES DR2, with a search radius of 1.0 _arcsec_. The aim was to include the columns of the set photometric measurements that are useful for calculating photo-z (apparent magnitudes and their respective errors).\n",
+    "\n",
+    "The characterization of the spectroscopic redshifts catalog is available in a [separate notebook](https://github.com/linea-it/pzserver/blob/main/docs/notebooks/public-specz-compilation.ipynb). If you have questions, please get in touch with us.\n",
+    "\n",
+    "--- \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ce385d91-cffd-419d-b699-65e218e86d7b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "The training set was created based on the spatial correspondence between the objects present in the reshift catalog described above and the object table (_coadd_objects_) of DES DR2, with a search radius of 1.0 _arcsec_, with the aim of including the columns of the set photometric measurements that are useful for calculating photo-z (apparent magnitudes and their respective errors). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e7ba2d5-4d08-460e-a1fd-c94cab0b1c50",
-   "metadata": {},
-   "source": [
-    "\n",
-    "--- \n",
-    "\n",
-    "## Sample characterization\n",
-    "\n",
-    "Check below a brief characterization of the data contained in the compiled collection of spectroscopic catalogs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7eeca28-7bfc-4449-9afd-b88b648d0418",
-   "metadata": {},
-   "source": [
-    "Requirements for this notebook:\n",
-    "\n",
-    "* **Auxiliary file**: [des-round19-poly.txt](https://github.com/kadrlica/skymap/blob/master/skymap/data/des-round19-poly.txt) (contours of the area covered by the survey, i.e., DES _footprint_, 2019 version).\n",
-    "* **View libraries**: seaborn, bokeh, holoviews\n",
-    "\n",
-    "_Download_ the file `des-round19-poly.txt` from the repository [kadrlica/skymap](https://github.com/kadrlica/skymap) on GitHub:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8c1f12b-4212-42cd-8271-fcbe881c9d7a",
+   "id": "744810c2-c932-4bb2-aeff-99950c3d1e57",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
    "source": [
-    "! wget https://raw.githubusercontent.com/kadrlica/skymap/master/skymap/data/des-round19-poly.txt  "
+    "## DES DR2\n",
+    "\n",
+    "Please find details about DES and its second data release on:  \n",
+    "    \n",
+    "- [DES website](https://www.darkenergysurvey.org/)\n",
+    "- [DES Data Management website](https://des.ncsa.illinois.edu/home)\n",
+    "- [DES DR2 paper](https://arxiv.org/abs/2101.05765)\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -110,23 +83,24 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import tables_io\n",
-    "import psutil\n",
     "import sys\n",
     "\n",
     "# Astropy\n",
     "from astropy import units as u\n",
     "from astropy.coordinates import SkyCoord\n",
-    "from astropy.units.quantity import Quantity\n",
+    "#from astropy.units.quantity import Quantity\n",
     "\n",
     "# Bokeh\n",
     "import bokeh\n",
     "from bokeh.io import output_notebook, show, output_file, reset_output\n",
-    "from bokeh.models import ColumnDataSource, Range1d, HoverTool\n",
+    "#from bokeh.models import ColumnDataSource, Range1d, HoverTool\n",
+    "from bokeh.models import ColumnDataSource, HoverTool, LinearColorMapper, ColorBar\n",
     "from bokeh.models import CDSView, GroupFilter\n",
     "from bokeh.plotting import figure, show, gridplot, output_notebook\n",
     "from bokeh.models import Range1d, LinearColorMapper, ColorBar\n",
     "from bokeh.transform import factor_cmap\n",
+    "from bokeh.plotting import show\n",
+    "output_notebook()\n",
     "\n",
     "# HoloViews\n",
     "import holoviews as hv\n",
@@ -134,18 +108,22 @@
     "from holoviews.operation.datashader import datashade, dynspread\n",
     "from holoviews.plotting.util import process_cmap\n",
     "\n",
+    "# PZ Server\n",
+    "from pzserver import PzServer\n",
+    "with open('token.txt', 'r') as file:\n",
+    "    token = file.read()\n",
+    "pz_server = PzServer(token=token, host=\"pz-dev\") # \"pz-dev\" is the temporary host for test phase  \n",
     "\n",
-    "# Config\n",
+    "# Configs\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "%reload_ext autoreload \n",
-    "%autoreload 2 \n",
-    "%matplotlib inline \n",
     "sns.set(color_codes=True, font_scale=1.5) \n",
     "sns.set_style('whitegrid')\n",
     "plt.rcParams.update({'figure.max_open_warning': 0})\n",
     "hv.extension('bokeh')\n",
-    "output_notebook()"
+    "%reload_ext autoreload \n",
+    "%autoreload 2 \n",
+    "%matplotlib inline "
    ]
   },
   {
@@ -164,16 +142,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "170fd4f2-dddd-4b3d-8fbf-6461a8d0cd88",
+   "metadata": {},
+   "source": [
+    "## Retrieve data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7eeca28-7bfc-4449-9afd-b88b648d0418",
+   "metadata": {},
+   "source": [
+    "Auxiliary file: `des-round19-poly.txt` (contours of the area covered by the survey, i.e., DES _footprint_, 2019 version) \n",
+    "\n",
+    "Download the file from the repository [kadrlica/skymap](https://github.com/kadrlica/skymap/blob/master/skymap/data/des-round19-poly.txt) on GitHub:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69883b2d-b313-4fe7-8dfd-ab511dc3082a",
+   "id": "b8c1f12b-4212-42cd-8271-fcbe881c9d7a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def fmt(x):\n",
-    "    return '{:.1f}%'.format(x)"
+    "! wget https://raw.githubusercontent.com/kadrlica/skymap/master/skymap/data/des-round19-poly.txt  "
    ]
   },
   {
@@ -204,19 +199,37 @@
    "id": "0de5e4d4-eed4-4d3c-8b06-f2175a5d4209",
    "metadata": {},
    "source": [
-    "Read training set file "
+    "Retrieve training set from PZ Server "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107a8ac3-0e34-48a5-9ac5-744ab6275e88",
-   "metadata": {
-    "tags": []
-   },
+   "id": "b949f4c3-facd-41b6-887d-c5428483965a",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "training_set = tables_io.read('public_pz_training_set.pq')"
+    "training_set_obj = pz_server.get_product('27_public_training_set_des_dr2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a4b8316-2cf6-4a0e-9870-06f45d075df9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_set_obj.display_metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d7a7fc2-4316-47ab-8264-3c0c6e66bbbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_set = training_set_obj.data"
    ]
   },
   {
@@ -256,10 +269,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b58a35-3f36-4d6a-8b37-8cdbd57fb208",
-   "metadata": {
-    "tags": []
-   },
+   "id": "c90741f9-b443-44a7-a127-1335d70a452d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "training_set.head()"
@@ -327,6 +338,19 @@
    "outputs": [],
    "source": [
     "training_set.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e7ba2d5-4d08-460e-a1fd-c94cab0b1c50",
+   "metadata": {},
+   "source": [
+    "\n",
+    "--- \n",
+    "\n",
+    "## Sample characterization\n",
+    "\n",
+    "Check below a brief characterization of the data contained in the compiled collection of spectroscopic catalogs."
    ]
   },
   {
@@ -693,9 +717,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pzlib",
    "language": "python",
-   "name": "python3"
+   "name": "pzlib"
   },
   "language_info": {
    "codemirror_mode": {
@@ -707,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
