--- a/docs/notebooks/2_training_sets.ipynb
+++ b/docs/notebooks/2_training_sets.ipynb
@@ -136,7 +136,7 @@
    "metadata": {},
    "source": [
     "#### PZ Server Pipelines\n",
-    "Trainind Sets can be uploaded by users on PZ Server website or via the `pzserver` library. Also, they can be created as the spatial cross-matching between a given Spec-z Catalog previously registered in the system and an Object table from a given LSST Data Release available in the Brazilian IDAC by the PZ Sever's pipeline \"Training Set Maker\" (under development). Any Training Set built by the pipeline is automatically registered as a regular user-generated data product and has no difference from the uploaded ones. \n",
+    "Training Sets can be uploaded by users on PZ Server website or via the `pzserver` library. Also, they can be created as the spatial cross-matching between a given Spec-z Catalog previously registered in the system and an Object table from a given LSST Data Release available in the Brazilian IDAC by the PZ Sever's pipeline \"Training Set Maker\" (under development). Any Training Set built by the pipeline is automatically registered as a regular user-generated data product and has no difference from the uploaded ones. \n",
     "\n"
    ]
   },
@@ -208,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "pzlib",
    "language": "python",
-   "name": "lsst"
+   "name": "pzlib"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   },
   "nbsphinx": {
    "execute": "never"
