Fixed error in notebooks doc

--- a/docs/notebooks/0_introduction.ipynb
+++ b/docs/notebooks/0_introduction.ipynb
@@ -27,11 +27,11 @@
     "tags": []
    },
    "source": [
-    "# The PZ Server\n",
+    "## The PZ Server\n",
     "\n",
     "<div id=\"introduction\"></div>\n",
     "\n",
-    "## Introduction \n"
+    "### Introduction \n"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to upload a data product on the PZ Server website\n",
+    "### How to upload a data product on the PZ Server website\n",
     "\n",
     "To upload a data product, click on the button **NEW PRODUCT** on the top left of the **User-generated Data Products** page and fill in the Upload Form with relevant metadata. Alternatively, the user can upload files to the PZ Server programmatically via the `pzserver` Python Library (described below). \n",
     "\n",
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to download a data product from the PZ Server website\n",
+    "### How to download a data product from the PZ Server website\n",
     "\n",
     "To download a data product available on the Photo-z Server, go to one of the two pages by clicking on the card \"Rubin Observatory PZ Data Products\" (for official products released by Rubin Data Management Team) or \"User-generated Data Products\" (for products uploaded by the members of LSST community). The **download** button is on the right side of each data product (each row of the list). Also, there are buttons to **share**, **remove**, and **edit** the metadata of a given data product. "
    ]
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The PZ Server API (Python library `pzserver`)"
+    "## The PZ Server API (Python library `pzserver`)"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to get general info from PZ Server"
+    "### How to get general info from PZ Server"
    ]
   },
   {
@@ -266,7 +266,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -318,7 +317,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -349,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to upload a data product to via Python API (alternative method)  "
+    "### How to upload a data product to via Python API (alternative method)  "
    ]
   },
   {
@@ -398,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to display the metadata of a data product    "
+    "### How to display the metadata of a data product    "
    ]
   },
   {
@@ -439,7 +437,7 @@
     "\n",
     "</div>\n",
     "\n",
-    "## How to download data products as .zip files   "
+    "### How to download data products as .zip files   "
    ]
   },
   {
@@ -468,7 +466,7 @@
     "\n",
     "</div>\n",
     "\n",
-    "## How to share data products with other RSP users\n",
+    "### How to share data products with other RSP users\n",
     "\n",
     "All data products uploaded to the PZ Server are imediately available and visible to all PZ Server users (people with RSP credentials) through the PZ Server website or via the API. Besides informing the product **id** or **internal_name** for programatic access, another way to share a data product is providing the product's URL, which leads to the product's download page. The URL is composed by the PZ Server website address + **/products/** + **internal_name**:\n",
     "\n",
@@ -496,7 +494,7 @@
     "\n",
     "</div>\n",
     "\n",
-    "## How to retrieve contents of data products (work on memory)"
+    "### How to retrieve contents of data products (work on memory)"
    ]
   },
   {
@@ -625,9 +623,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "lsst"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -639,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.10"
   },
   "nbsphinx": {
    "execute": "never"
