Add text and code examples for accessing different data product types.

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The connection with the PZ Server is made by an object of the class `PzServer.` To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server.linea.org.br/) . "
+    "The connection with the PZ Server is made by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the users must provide an **API Token** generated on the top right menu on the [PZ Server website](https://pz-server.linea.org.br/) . "
    ]
   },
   {
@@ -456,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To download any data product stored in the PZ Server, use the `PzServer`'s method `download_product` informing the product's **internal_name** and the path to where it will be saved (the default is the current folder). This method downloads a compressed .zip file, which contains all the files uploaded by the user, including data, ancillary files, and description files. The time spent downloading a data product depends on the internet connection between the user and the host. Let's try it with a small data product. "
+    "To download any data product stored in the PZ Server, use the `PzServer`'s method `download_product` informing the product's **internal_name** and the path to where it will be saved (the default is the current folder). This method downloads a compressed .zip file, which contains all the files uploaded by the user, including data, ancillary files, and description files. Let's try it with a small data product. "
    ]
   },
   {
@@ -621,21 +621,6 @@
    "cell_type": "markdown",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-11T14:43:17.277296Z",
-     "iopub.status.busy": "2024-12-11T14:43:17.276646Z",
-     "iopub.status.idle": "2024-12-11T14:43:17.345452Z",
-     "shell.execute_reply": "2024-12-11T14:43:17.344690Z",
-     "shell.execute_reply.started": "2024-12-11T14:43:17.277264Z"
-    }
-   },
-   "source": [
-    "## Spec-z Catalog "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "execution": {
      "iopub.execute_input": "2024-12-11T14:44:23.295109Z",
      "iopub.status.busy": "2024-12-11T14:44:23.294100Z",
      "iopub.status.idle": "2024-12-11T14:44:23.394796Z",
@@ -644,6 +629,10 @@
     }
    },
    "source": [
+    "## Data Products\n",
+    "\n",
+    "### Spec-z Catalog \n",
+    "\n",
     "In the context of the PZ Server, Spec-z Catalogs are defined as any catalog containing spherical equatorial coordinates and spectroscopic redshift measurements (or, analogously, true redshifts from simulations). A Spec-z Catalog can include data from a single spectroscopic survey or a combination of data from several sources. To be considered a single Spec-z Catalog, the data should be provided as a single file to PZ Server's upload tool. Adding the survey name or identification as an extra column is recommended for multi-survey catalogs. \n",
     "\n",
     "\n",
@@ -736,7 +725,7 @@
     }
    },
    "source": [
-    "## Training Sets \n",
+    "### Training Sets \n",
     "    \n",
     "In the context of the PZ Server, Training Sets are defined as the product of the spatial cross-matching between a given Spec-z Catalog (single survey or compilation) and the photometric data, in this case, the LSST Objects Catalog. The PZ Server's *Training Set Maker* pipeline allows users to build customized Training Sets based on the available Spec-z Catalogs (details below).    \n",
     "\n",
@@ -826,9 +815,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PAREI AQUI - Training and Validation Results\n",
+    "### Training Results\n",
     "\n",
-    "The results of training or validating PZ algorithms can not be loaded into memory directly but can be downloaded to the local work directory. "
+    "The training results of machine learning-based PZ algorithms can also be hosted in the PZ Server to be shared and reused. This product type allows files in free format. When the training results are generated with RAIL, they are stored as *pickle* files and can be downloaded to the local work directory. \n",
+    "\n",
+    "OBS: The method `download_product` always brings the data as a compressed (.zip) file, regardless of the number of auxiliary files attached to the data. "
    ]
   },
   {
@@ -837,14 +828,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.download_product(\"182_example_tpz_training_results\", save_in=\".\") "
+    "pz_server.download_product(\"197_goldenspike_flexzboost\", save_in=\".\") "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PZ Server Pipelines (under development) \n",
+    "### Validation Results\n",
+    "\n",
+    "The PZ Server is also a good place to safely store the results of a photo-z validation procedure. Users can upload a list of files in free format, such as tabular files with photo-z estimates (single estimates and/or PDFs) of a validation set, auxiliary files with photo-z validation metrics, validation plots, etc. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.download_product(\"11_goldenspike_flexzboost\", save_in=\".\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Photo-z Tables \n",
+    "\n",
+    "Photo-z tables are the results of a photo-z estimation procedure. If the data is larger than the file upload limit of 200MB (for instance, the PZ tables for the LSST Object catalogs delivered as part of annual data releases), the product entry stores only the metadata (and instructions on accessing the data should be provided in the description field)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PZ Server Pipelines (under development) \n",
     "\n",
     "Spec-z Catalogs and Training Sets can be created using the cross-matching pipelines available on the PZ Server. Any catalog built by the pipeline is automatically registered as a regular user-generated data product and is the same as the uploaded ones. \n"
    ]
