--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -701,7 +701,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gama.data.plot(x=\"RA\", y=\"DEC\", kind=\"scatter\")  "
+    "gama.data.plot(x=\"RA (degrees)\", y=\"DEC (degrees)\", kind=\"scatter\")  "
    ]
   },
   {
@@ -1098,7 +1098,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsm.run()  # or wait_processing(tsm) in PzServer class         \n"
+    "#tsm.run()  # or wait_processing(tsm) in PzServer class         \n"
    ]
   },
   {
