add screenshot of pzserver home

--- a/docs/notebooks/pzserver_tutorial.ipynb
+++ b/docs/notebooks/pzserver_tutorial.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br) <br>\n",
-    "Last verified run: **2024-Dec-23**"
+    "Last verified run: **2024-Dec-27**"
    ]
   },
   {
@@ -48,6 +48,12 @@
    },
    "source": [
     "## The PZ Server website\n",
+    "\n",
+    "\n",
+    "<center>\n",
+    "    <img src=\"images/ScreenshotPZServerHome.png\"> \n",
+    "</center>\n",
+    "\n",
     "\n",
     "### About the PZ Server \n",
     "\n",
