bugfix: fix token file path

--- a/docs/notebooks/qa_notebooks/ztrue_tract_3833.ipynb
+++ b/docs/notebooks/qa_notebooks/ztrue_tract_3833.ipynb
@@ -145,6 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "job.wait(phases=['COMPLETED', 'ERROR'])\n",
     "print('Job phase is', job.phase)"
    ]
@@ -201,6 +202,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89aa5fe2-3efa-49e0-a564-029b5dbd138a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-01-03T16:08:36.224812Z",
+     "iopub.status.busy": "2025-01-03T16:08:36.224051Z",
+     "iopub.status.idle": "2025-01-03T16:08:36.228982Z",
+     "shell.execute_reply": "2025-01-03T16:08:36.228237Z",
+     "shell.execute_reply.started": "2025-01-03T16:08:36.224785Z"
+    }
+   },
+   "source": [
+    "Save the notebook with current output cells (manually)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "52d0e6c3-189f-4810-95d3-5277e4f82f38",
    "metadata": {},
    "source": [
@@ -234,7 +251,7 @@
    "outputs": [],
    "source": [
     "from pzserver import PzServer \n",
-    "with open('token.txt', 'r') as file:\n",
+    "with open('../token.txt', 'r') as file:\n",
     "    token = file.read()\n",
     "pz_server = PzServer(token=token, host=\"pz-dev\") # \"pz-dev\" is the temporary host during the test phase  "
    ]
